--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "regenerator-runtime": "^0.13.9",
